--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,17 @@ body {
     height: 200px;
 }
 
+.container{
+               max-width: 800px;
+              
+             
+            
+               color: #ce1111;
+               font-family: sans-serif;
+        
+               padding-top: 60px;
+               padding-bottom: 98px;
+             
+               margin: auto;
+         }
+
