[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -18,6 +18,10 @@ body {
 
 .img-medium {
     height: 200px;
+    height: 250px;
+    margin-top:75px;
+    margin-right:600px;
+    
 }
 
 .container{
