[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -26,9 +26,7 @@ body {
 
 .container{
                max-width: 800px;
-              
-             
-            
+                margin-right:600px;
                color: #ce1111;
                font-family: sans-serif;
         
