[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -33,4 +33,8 @@ body {
              
                margin: auto;
          }
-
+div{
+    background-image:url("http://uploads.strikinglycdn.com/static/backgrounds/business-2/145.jpg");
+    background-repeat: no-repeat;
+         
+}
