[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -35,6 +35,7 @@ body {
          }
 div{
     background-image:url("http://uploads.strikinglycdn.com/static/backgrounds/business-2/145.jpg");
+    background-position: 20px 100px;
     background-repeat: no-repeat;
          
 }
