--- a/ui/style.css
+++ b/ui/style.css
@@ -17,4 +17,26 @@ h1, h3, h4, h5, p {
   margin-bottom: 22px;
 }
 
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+.group:after {
+  clear: both;
+}
+.group {
+  clear: both;
+  zoom: 1;
+}
+.logo {
+  border-top: 4px solid #648880;
+  padding: 40px 0 22px 0;
+  float: left;
+}
+primary-footer {
+  padding-bottom: 44px;
+  padding-top: 44px;
+}
+
                   
