--- a/ui/style.css
+++ b/ui/style.css
@@ -105,6 +105,10 @@ h5 {
   font-size: 14px;
   font-weight: 400;
 }
+div {
+  background-image: url("http://uploads.strikinglycdn.com/static/backgrounds/business-2/147.jpg");
+  background-repeat: no-repeat;
+}
 
 
               
